# raspberry_weather

./: CMakeLists.txt  Makefile  main.cpp
curl_include/: config-riscos.h  curl_setup.h
main_includes/: utils.h
main_src/: main.cpp  utils.cpp
openssl_include/: opensslconf.h
test_external_make.xcodeproj/: project.pbxproj
test_external_make.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
test_external_make.xcodeproj/xcuserdata/dimagubatenko.xcuserdatad/xcschemes/: test_external_make.xcscheme  xcschememanagement.plist
